# poster-safari

./: README.md
database/: README.md
docs/: CNAME  impressum.html  index.html  index2.html  privacy-policy-de.txt  privacy-policy.html
docs/assets/css/: ie8_BACKUP_10589.css  ie9.css.orig  jquery.cookiebar.css  main.css  main.css.orig
docs/assets/sass/: ie9.scss.orig
images/: logo.eps
server-backend/: CMakeLists.txt  Doxyfile  README.md
server-backend/cmake/: FindCurlpp.cmake  FindEasyLoggingpp.cmake  FindSparsehash.cmake
server-backend/src/common/: base64.cpp  couchdb.cpp  couchdb.h  imagedata.cpp  imagedata.h  metadata.h  postrdata.cpp  postrdata.h  util.cpp  util.h
server-backend/src/editor/: CMakeLists.txt  README  postersafari-editor.desktop
server-backend/src/editor/src/: documentmodel.cpp  documentmodel.h  editor.cpp  editor.h  editor.ui  main.cpp
server-backend/src/pipeline/: .main.cpp.kate-swp  CMakeLists.txt  couchdbstream.cpp  couchdbstream.h  main.cpp  stream.cpp  stream.h
server-backend/src/pipeline/workers/: CMakeLists.txt  asyncworker.cpp  asyncworker.h  worker.cpp  worker.h  workerexport.h  workerloader.cpp  workerloader.h
server-backend/src/pipeline/workers/backgroundsegmentationworker/: CMakeLists.txt  README.md  bgsegmentworker.cpp  bgsegmentworker.h  main.cpp
server-backend/src/pipeline/workers/naivesemanticanalysis/: CMakeLists.txt  README.md  main.cpp  naivesemanticanalysis.cpp  naivesemanticanalysis.h  openstreetmaps.cpp  ping.cpp
server-backend/src/pipeline/workers/ocrworker/: CMakeLists.txt  README.md  main.cpp  ocrworker.cpp  ocrworker.h
server-backend/src/pipeline/workers/regexworker/: CMakeLists.txt  README.md  main.cpp  regexworker.cpp  regexworker.h
server-backend/src/pipeline/workers/spellcorrect/: .gitignore  CMakeLists.txt  cities.txt  main.cpp  spellcorrect.h  spellcorrectworker.cpp  spellcorrectworker.h  substitutioncosts.txt
server-backend/src/pipeline/workers/spellcorrect/artists/: crawl_music.sh  music.add  music.txt
server-backend/src/pipeline/workers/spellcorrect/glyphs/: .gitignore  createCostFile.sh
server-backend/src/pipeline/workers/spellcorrect/locations/: aachen.txt  augsburg.txt  bergisch-gladbach.txt  berlin.txt  bielefeld.txt  bochum.txt  bonn.txt  bottrop.txt  braunschweig.txt  bremen.txt  bremerhaven.txt  burglengenfeld.txt  chemnitz.txt  cottbus.txt  darmstadt.txt  dortmund.txt  dresden.txt  duisburg.txt  düsseldorf.txt  erfurt.txt  erlangen.txt  essen.txt  frankfurt.txt  freiburg.txt  fürth.txt  gelsenkirchen.txt  göttingen.txt  hagen.txt  halle (saale).txt  hamburg.txt  hannover.txt  heidelberg.txt  heilbronn.txt  herne.txt  ingolstadt.txt  karlsruhe.txt  kassel.txt  kiel.txt  koblenz.txt  krefeld.txt  (+26 more)
server-backend/src/pipeline/workers/textgroupcollateworker/: CMakeLists.txt  README.md  main.cpp  textgroupcollateworker.cpp  textgroupcollateworker.h
server-backend/src/pipeline/workers/votingtextmergeworker/: CMakeLists.txt  main.cpp  votingtextmergeworker.cpp  votingtextmergeworker.h
server-backend/src/pipeline/workers/wordsplitworker/: CMakeLists.txt  README.md  main.cpp  wordsplitworker.cpp  wordsplitworker.h
smartphone-app/: README.md  config.xml  ionic.config.json  package.json
smartphone-app/src/: declarations.d.ts  index.html  manifest.json  service-worker.js  tsconfig.json
smartphone-app/src/app/: app.component.ts  app.module.ts  app.scss
smartphone-app/src/assets/i18n/: de.json  en.json
smartphone-app/src/models/: eventDTO.ts
smartphone-app/src/pages/about/: about.html  about.ts
smartphone-app/src/pages/details/: details.html  details.scss  details.ts
smartphone-app/src/pages/edit/: edit.html  edit.scss  edit.ts
smartphone-app/src/pages/home/: home.html  home.scss  home.ts
smartphone-app/src/pages/imageview/: imageview.html  imageview.scss  imageview.ts
smartphone-app/src/pages/introduction/: introduction.html  introduction.scss  introduction.ts
smartphone-app/src/pages/main-menu/: main-menu.ts
smartphone-app/src/providers/: dao.ts  feedback.ts  global-vars.ts  imager.ts  util.ts
smartphone-app/src/theme/: variables.scss
web/: index.html
web/assets/js/: main.js.orig
web/assets/sass/: ie8.scss.orig  main.scss.orig
web/assets/sass/libs/: _vars.scss.orig
